[S034]: Record privacy-friendly search aggregates
